docs: atualizar plano de migração - Fases 2 e 3 concluídas ✅
- Fase 2: Bugs críticos PKCS#11 e CertificateExtra corrigidos
- Fase 3: POMs atualizados para Java 11 target
- Documentado decisão de usar Java 11 ao invés de 21
- BUILD SUCCESS com Java 11 target